--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <link rel="icon" type="image/png" href="icon.png">
+ <link rel="icon" type="image/x-icon" href="icon.ico">
 
 <head>
     <meta charset="UTF-8">
