--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <meta ng-csp="no-unsafe-eval">
 
     <meta name="user-data"
-          data-userid="2667638292"
-          data-name="legendary6diamond1"
-          data-displayName="Four"
+          data-userid="0"
+          data-name=""
+          data-displayName="?"
           data-isunder13="true" 
-          data-created="06/22/2021 20:12:51" 
-          data-ispremiumuser="false"
-          data-hasverifiedbadge="false"/>
+          data-created="06/22/0 20:12:51" 
+          data-ispremiumuser="true"
+          data-hasverifiedbadge="true"/>
 
 <meta name="locale-data"
       data-language-code="en_us"
