--- a/secondfakerbx.html
+++ b/secondfakerbx.html
@@ -1,4 +1,6 @@
-
+layout: page
+title: "Buy Robux"
+permalink: /upgrades/robux?ctx=navpopover
 
 <!DOCTYPE html>
 <!--[if IE 8]><html class="ie8" ng-app="robloxApp"><![endif]-->
@@ -1041,3 +1043,4 @@ function checkRobloxInstall() {
 
 </body>
 </html>
+
